// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstantSearch Search Client Lifecycle calls the provided searchFunction when used 1`] = `
Array [
  Object {
    "indexName": "",
    "params": Object {
      "facets": Array [],
      "query": "test",
      "tagFilters": "",
    },
  },
]
`;

exports[`InstantSearch Search Client Lifecycle gets called on search 1`] = `
Array [
  Object {
    "indexName": "",
    "params": Object {
      "facets": Array [],
      "tagFilters": "",
    },
  },
]
`;

exports[`InstantSearch Search Client Properties throws if no \`search()\` method 1`] = `
"The \`searchClient\` must implement a \`search\` method.

See: https://www.algolia.com/doc/guides/building-search-ui/going-further/backend-search/in-depth/backend-instantsearch/js/"
`;
